--- a/index.html
+++ b/index.html
@@ -148,6 +148,30 @@
             <h2 class="box"><span class="text-primary fs-2 pt-2 pb-2">Experience</span></h2>
             <div class="row pt-3 pb-3 media-padding">
               <div class="mb-4 ms-3">
+                <b><span class="text-white">Web Development Mentor</span> <span class="text-primary">@ University of Massachusetts, Amherst</span></b>
+                <br>
+                <span class="font-secondary">September 2022 - Present</span>
+                <div class="flex-container">
+                  <div class="flex-arrow-right">
+                    <i class="fa fa-caret-right"></i>
+                  </div>
+                  <div class="flex-content">
+                    Mentored students in expanding their front-end and back-end web development skillset including HTTP, HTML, CSS, JavaScript, Node.js, and more.
+                  </div>
+                  <div class="flex-arrow-right">
+                    <i class="fa fa-caret-right"></i>
+                  </div>
+                  <div class="flex-content">
+                    Demonstrated students how to integrate back-end with front-end using API requests, and communicate with databases such as PostgreSQL, mySQL, and MongoDB, resulting in 95% students' project completeness.
+                  </div>
+                  <div class="flex-arrow-right">
+                    <i class="fa fa-caret-right"></i>
+                  </div>
+                  <div class="flex-content">
+                    Developed a Github feedback application with other mentors to make grading students easier using React, TypeScript, CSS, Node.js and Electron.
+                  </div>
+                </div>
+                <br>
                 <b><span class="text-white">Software Engineering Intern</span> <span class="text-primary">@ Labour Affairs Bureau</span></b>
                 <br>
                 <span class="font-secondary">May 2021 - August 2021</span>
@@ -157,67 +181,43 @@
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Eliminated corrupted and incorrect data to ensure consistency and integrity by using Python.
+                    Revamped UI and app interface to be responsive with the front-end team using HTML, CSS and Bootstrap, led to 20% more visitors per month.
                   </div>
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Collaborated with the IT and infrastructure team to set up patch automation for all local Linux servers.                    Collaborated with the IT team and the infrastructure team to set up patch automation for all Linux servers in LAB.
+                    Improved system response time by deleting duplicates from the labor market database using PostgreSQL.
                   </div>
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Interviewed workers for data collection to analyze labor market activities.
+                    Presented in weekly scrum standup to deliver development progress and accomplishments.
                   </div>
                 </div>
                 <br>
-                <b><span class="text-white">Undergraduate Course Assistant</span> <span class="text-primary">@ University of Massachusetts Amherst</span></b>
+                <b><span class="text-white">Web Designer and Developer</span> <span class="text-primary">@ PupPack, an E-commerce business</span></b>
                 <br>
-                <span class="font-secondary">September 2022 - Present</span>
+                <span class="font-secondary">June 2020 - February 2021</span>
                 <div class="flex-container">
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Served as a mentor for web programming courses and assisted professors in developing courses.
+                    Designed mockups and wireframes for a product landing page using Figma, Canva, and Adobe PS, increased click-through rate and conversion rate by 35%.
                   </div>
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Held office hours to answer students’ questions and helped them understand various technical competencies.
+                    Remodeled the layout of the front page to increase engagement rate using HTML, CSS, JavaScript, and Shopify.
                   </div>
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Debugged and graded students’ projects and provided concrete feedback to further their coding skills.
-                  </div>
-                </div>
-                <br>
-                <b><span class="text-white">Accounting Clerk</span> <span class="text-primary">@ Daikin Industries Ltd</span></b>
-                <br>
-                <span class="font-secondary">June 2020 - August 2020</span>
-                <div class="flex-container">
-                  <div class="flex-arrow-right">
-                    <i class="fa fa-caret-right"></i>
-                  </div>
-                  <div class="flex-content">
-                    Processed outgoing invoices and incoming payments and achieved 95% performance to goals.
-                  </div>
-                  <div class="flex-arrow-right">
-                    <i class="fa fa-caret-right"></i>
-                  </div>
-                  <div class="flex-content">
-                    Communicated with vendors, customers, and colleagues to resolve inquiries and issues.
-                  </div>
-                  <div class="flex-arrow-right">
-                    <i class="fa fa-caret-right"></i>
-                  </div>
-                  <div class="flex-content">
-                    Prepared bank deposits, general ledger postings and statements.
+                    Integrated third-party REST APIs such as Klaviyo and Mailchimp to improve email marketing campaigns.
                   </div>
                 </div>
               </div>
