new experience and status

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             </div>
             <div class="fs-4 pt-2 pb-2 fade-in" id="first-3">
                 I am passionate in designing and building applications that can benefit the human kind and
-                change the world. Currently, I am a senior in the major of computer science at
-              <a href="https://www.umass.edu">UMass Amherst</a>.
+                change the world. Currently, I am working as a software engineer at
+              <a href="https://www.mybaseline.co/">Baseline</a>.
             </div>
           </div>
         </div>
@@ -148,31 +148,31 @@
             <h2 class="box"><span class="text-primary fs-2 pt-2 pb-2">Experience</span></h2>
             <div class="row pt-3 pb-3 media-padding">
               <div class="mb-4 ms-3">
-                <b><span class="text-white">Web Development Mentor</span> <span class="text-primary">@ University of Massachusetts, Amherst</span></b>
+                <b><span class="text-white">Software Engineer</span> <span class="text-primary">@ Baseline Co</span></b>
                 <br>
-                <span class="font-secondary">September 2022 - Present</span>
+                <span class="font-secondary">September 2023 - Present</span>
                 <div class="flex-container">
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Mentored students in expanding their front-end and back-end web development skillset including HTTP, HTML, CSS, JavaScript, Node.js, and more.
+                    Collaborated with the software development team to design, develop, test, and deploy robust full-stack mobile applications and systems using Swift, NodeJS.
                   </div>
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Demonstrated students how to integrate back-end with front-end using API requests, and communicate with databases such as PostgreSQL, mySQL, and MongoDB, resulting in 95% students' project completeness.
+                    Worked with cross-functional teams to integrate software components and ensure compatibility and performance.
                   </div>
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Developed a Github feedback application with other mentors to make grading students easier using React, TypeScript, CSS, Node.js and Electron.
+                    Coordinated closely with product management, QA, and operations teams to seamlessly integrate software components, achieving performance optimization and ensuring timely delivery of solutions.
                   </div>
                 </div>
                 <br>
-                <b><span class="text-white">Software Engineering Intern</span> <span class="text-primary">@ Labour Affairs Bureau</span></b>
+                <b><span class="text-white">Software Engineer Intern</span> <span class="text-primary">@ Labour Affairs Bureau</span></b>
                 <br>
                 <span class="font-secondary">May 2021 - August 2021</span>
                 <br>
@@ -181,23 +181,23 @@
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Revamped UI and app interface to be responsive with the front-end team using HTML, CSS and Bootstrap, led to 20% more visitors per month.
+                    Revamped the user interface and user experience design of a mobile web application, resulting in a significant increase in monthly visitors and an improved overall user experience.
                   </div>
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Improved system response time by deleting duplicates from the labor market database using PostgreSQL.
+                    Tested and debugged for the employment database using PostgreSQL, led to an improving system response time.
                   </div>
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Presented in weekly scrum standup to deliver development progress and accomplishments.
+                    Partnered with fellow interns to strategize and implement enhancements to website responsiveness, and conducted unit testing to identify and minimize errors, ensuring a more robust and user-friendly application.
                   </div>
                 </div>
                 <br>
-                <b><span class="text-white">Web Designer and Developer</span> <span class="text-primary">@ PupPack, an E-commerce business</span></b>
+                <b><span class="text-white">Web Designer and Developer</span> <span class="text-primary">@ PupPack, an E-commerce SaaS</span></b>
                 <br>
                 <span class="font-secondary">June 2020 - February 2021</span>
                 <div class="flex-container">
