--- a/index.html
+++ b/index.html
@@ -156,19 +156,19 @@
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Collaborated with the software development team to design, develop, test, and deploy robust full-stack mobile applications and systems using Swift, NodeJS.
+                    Integrated Stripe payment system in SwiftUI using Stripe iOS SDK, providing customizable payment options and ensuring secure payment data handling, thus enhancing payment flexibility and e-commerce capabilities.
                   </div>
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Worked with cross-functional teams to integrate software components and ensure compatibility and performance.
+                    Spearheaded the proposal and implementation of the Shopify REST and GraphQL API to drive optimization of order and fulfillment processing within the iOS app.
                   </div>
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Coordinated closely with product management, QA, and operations teams to seamlessly integrate software components, achieving performance optimization and ensuring timely delivery of solutions.
+                    Developed real-time order status notifications through Shopify API Webhook subscriptions, resulting in improved user experience and satisfaction.
                   </div>
                 </div>
                 <br>
@@ -181,13 +181,13 @@
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Revamped the user interface and user experience design of a mobile web application, resulting in a significant increase in monthly visitors and an improved overall user experience.
+                    Revamped the user interface and user experience design of a mobile web application using HTML and CSS media queries, resulting in a significant increase in monthly visitors and an improved overall user experience.
                   </div>
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
                   </div>
                   <div class="flex-content">
-                    Tested and debugged for the employment database using PostgreSQL, led to an improving system response time.
+                    Debugged and removed unwanted data from Employment database in PostgreSQL, led to improving system speed.
                   </div>
                   <div class="flex-arrow-right">
                     <i class="fa fa-caret-right"></i>
